--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-discord.py==1.7.3
-discord-py-slash-command==3.0.3
-python-dotenv
-snakemd
+discord.py==2.1.0
+python-dotenv==0.21.0
+snakemd==0.11.0
